dynosaur/tests/fail/self_and_box_receivers.stderr
error: unsupported self type
 --> tests/fail/self_and_box_receivers.rs:9:16
  |
9 |     fn self_rc(self: Rc<Self>) -> impl Send;
  |                ^^^^^^^^^^^^^^

error: By value Self is not supported
 --> tests/fail/self_and_box_receivers.rs:7:14
  |
7 |     fn owned(self) -> impl Send;
  |              ^^^^

error: Box<Self> is not supported
 --> tests/fail/self_and_box_receivers.rs:8:17
  |
8 |     fn self_box(self: Box<Self>) -> impl Send;
  |                 ^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

